@@ -1,0 +1,13 @@
+package luckycoins.event;
+
+import cpw.mods.fml.common.eventhandler.SubscribeEvent;
+import cpw.mods.fml.common.gameevent.TickEvent;
+
+public class EventClient
+{
+	@SubscribeEvent
+	public void clientTick(TickEvent.ClientTickEvent e)
+	{
+		//
+	}
+}
