@@ -1,0 +1,12 @@
+package luckycoins.gui;
+
+import net.minecraft.client.gui.GuiScreen;
+
+public class ModGui extends GuiScreen
+{
+	@Override
+	public boolean doesGuiPauseGame()
+	{
+		return false;
+	}
+}
